MidPointRectangle integrator added by default. Trapezoidal removed.

--- a/gui/ui/Preferences.ui
+++ b/gui/ui/Preferences.ui
@@ -253,7 +253,7 @@
           </item>
           <item>
            <property name="text">
-            <string>Trapezoidal</string>
+            <string>MidPointRectangle</string>
            </property>
           </item>
          </widget>
