--- a/qtfuzzylite/ui/Variable.ui
+++ b/qtfuzzylite/ui/Variable.ui
@@ -135,6 +135,34 @@
          </property>
         </widget>
        </item>
+       <item>
+        <widget class="QToolButton" name="btn_term_up">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/icons/icons/up.png</normaloff>:/icons/icons/up.png</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QToolButton" name="btn_term_down">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="icon">
+          <iconset resource="resources.qrc">
+           <normaloff>:/icons/icons/down.png</normaloff>:/icons/icons/down.png</iconset>
+         </property>
+        </widget>
+       </item>
       </layout>
      </item>
      <item>
